missed one more -Xlint:unchecked. removed unused --add-exports for mapper package which has been removed.